# Hubble-Systematics-Review-Chain

./: .gitignore  AGENTS.md  README.md  excitement.md  pyproject.toml
configs/: pantheon_plus_audit.yaml  pantheon_plus_shoes_ladder_anchor_enforced.yaml  pantheon_plus_shoes_ladder_anchor_enforced_sweep.yaml  pantheon_plus_shoes_ladder_anchor_enforced_sweep_v2.yaml  pantheon_plus_shoes_ladder_audit.yaml  pantheon_plus_shoes_ladder_epoch_offsets_sweep.yaml  pantheon_plus_shoes_ladder_fitprob_cut_scan.yaml  pantheon_plus_shoes_ladder_injection_calibcov_pkmjd_bins_modeled_v1.yaml  pantheon_plus_shoes_ladder_injection_calibcov_survey_pkmjd_bins_misspec_v1.yaml  pantheon_plus_shoes_ladder_injection_kcor_survey_pkmjd_bins_misspec_fullcov_v1.yaml  pantheon_plus_shoes_ladder_injection_kcor_survey_pkmjd_bins_misspec_v1.yaml  pantheon_plus_shoes_ladder_injection_misspec.yaml  pantheon_plus_shoes_ladder_injection_misspec_v2.yaml  pantheon_plus_shoes_ladder_injection_misspec_v3.yaml  pantheon_plus_shoes_ladder_injection_realcal_surveytime_shoeslin_covproj_modeled_v1.yaml  pantheon_plus_shoes_ladder_injection_sky_bestaxis.yaml  pantheon_plus_shoes_ladder_level_sweep.yaml  pantheon_plus_shoes_ladder_level_sweep_v2.yaml  pantheon_plus_shoes_ladder_mechanisms_audit.yaml  pantheon_plus_shoes_ladder_predictive_score.yaml  pantheon_plus_shoes_ladder_predictive_score_cal_holdout_mechanism_scan_v1.yaml  pantheon_plus_shoes_ladder_predictive_score_cal_survey_holdout_v1.yaml  pantheon_plus_shoes_ladder_predictive_score_cid_holdout_kcor_v1.yaml  pantheon_plus_shoes_ladder_sbc_calibcov_v1.yaml  (+54 more)
(+1275 files in other folders)
