[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hubble-systematics-audit"
version = "0.1.0"
description = "Systematics-first Hubble-tension audit pipeline (cuts, drift nulls, injections, SBC)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Codex CLI agent"}]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "pandas>=2.2",
  "matplotlib>=3.8",
  "pyyaml>=6.0",
  "tqdm>=4.66",
  "healpy>=1.16",
  "astropy>=6.0",
  "emcee>=3.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-xdist>=3.5",
]

[project.scripts]
hubble-audit = "hubble_systematics.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

